--- a/Proyecto Integrado - Alejandro Pascual Moreno/style.css
+++ b/Proyecto Integrado - Alejandro Pascual Moreno/style.css
@@ -222,6 +222,7 @@ h5{
     background-color: #ffbfee;
     padding: 30px 0;
     margin-top: 50px;
+   
   }
   
   footer p {
@@ -231,9 +232,61 @@ h5{
     margin: 0 auto;
     max-width: 800px;
   }
+
+  .formulario_inicio{
+    text-align: center;
+  }
+
+  .botonlogin_inicio {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 15px;
+    border: 2px solid rgb(108, 108, 108);
+    background-color: #ff9be4;
+    color: #fff;
+    box-shadow: 0 8px 16px rgba(255, 155, 228, 0.4);
+    transition: all 0.3s ease;
+    
+  }
+  
+  .botonlogin_inicio:hover {
+    background-color: #fff;
+    color: #ff9be4;
+    box-shadow: 0 8px 16px rgba(255, 155, 228, 0.8);
+    transform: scale(1.1);
+  }
+
+  input[type="email"],
+input[type="password"] {
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
+
+input[type="email"]:focus,
+input[type="password"]:focus {
+  outline: none;
+  border-color: #7d6c78;
+  box-shadow: 0 0 5px #7d6c78;
+}
+
+select {
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+select:focus {
+  outline: none;
+  border-color: #7d6c78;
   
   
-
-
-
+}
+  }
